--- a/src/resources/views/articles/show.hbs
+++ b/src/resources/views/articles/show.hbs
@@ -7,6 +7,5 @@
     <a href="/articles/edit/{{ article.id }}" class="btn btn-info">Edit</a>
 
     <div>
-      {{ article.sanitizedHtml }}
-    </div>
+      <div>{{{ article.sanitizedHtml }}}</div>
   </div>
