--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -71,7 +71,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="http://localhost:3000/home">Home</a>
         </li>
@@ -87,6 +87,29 @@
         <li class="nav-item active">
           <a class="nav-link" href="#">Ranking</a>
         </li>
+         <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Nâng cao
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Thư viện</a>
+              <a class="dropdown-item" href="#">Phòng chat</a>
+              <a class="dropdown-item" href="#">Phòng tập trung</a>
+            </div>
+      </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img src="https://image.winudf.com/v2/image/Y29tLmFuZHJvbW8uZGV2NjYwNjE0LmFwcDc0OTQ3Ml9zY3JlZW5fNl8xNTE5MzM1NTAxXzAyNA/screen-6.jpg?fakeurl=1&type=.jpg" alt="" class="user-avatar">
+              Nhóm 5
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="http://localhost:3000/courses/create">Thêm khóa học</a>
+              <a class="dropdown-item" href="http://localhost:3000/me/stored/courses">Quản lý khóa học</a>
+              <a class="dropdown-item" href="#">Đăng xuất</a>
+            </div>
+      </li>
       </ul>
     </div>
 
