--- a/src/resources/views/articles/new.hbs
+++ b/src/resources/views/articles/new.hbs
@@ -1,7 +1,7 @@
 <div class="container">
     <h1 class="mb-4">New Blog</h1>
 
-    <form action="/articles" method="POST">
+    <form action="/articles/store" method="POST">
       {{> _form_fields}}
     </form>
   </div>
